--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         密码： <input type="password" v-model="user_pass"> <br>
          <button @click="login">登录</button>  <!--v-on缩写 @ -->
     </div>
-    <script src="./js/axios.min.js"></script>
+    <!-- <script src="./js/axios.min.js"></script> -->
     <script src="./js/vue.2.6.12.js"></script>
     <script src="./js/vue-router.js"></script>
     <script>
